# bevy_lean_sdf

./: Cargo.toml  README.md  book.toml
.github/workflows/: release.yml
assets/: array_texture.wgsl  instancing-shader.wgsl
benches/: entity_spawning.rs
examples/: place_boxes.rs
src/: lib.rs  sdf_instanced_shader.rs  sdf_object.rs  sdf_operations.rs  sdf_primitives.rs  sdf_shader.rs  sdf_trait.rs
tools/ci/src/: main.rs
