[package]
name = "bevy_lean_sdf"
description = "An experimental SDF raymarcher for bevy, attempting to be compatible with WebGL/mobile devices"
version = "0.0.0"
authors = ["Lee-Orr"]
homepage = "https://lee-orr.com"
repository = "https://github.com/lee-orr/bevy_lean_sdf"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["games", "game-development"]
keywords = ["bevy"]
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
resolver = "2"

[profile.dev]
opt-level = 3

[workspace]
members = ["./", "tools/ci"]

[dependencies]
bevy = { version = "0.8", default-features = false}

[patch.crates-io]
# We can override the bevy version with remote or local versions
# This method causes less pain to downstream users trying to work off your revisions
#bevy = { git = "https://github.com/bevyengine/bevy" }
#bevy = { path = "../bevy" }

[dev-dependencies]
criterion = "0.3"
# We can use a different feature set of Bevy for our library vs our examples and tests
bevy = { version = "0.8", default-features = true, features = ["dynamic"]}
assert_float_eq = "1.1.3"


[lib]
name = "template_lib"
path = "src/lib.rs"

[[bench]]
name = "entity_spawning"
path = "benches/entity_spawning.rs"
harness = false
